3. Integrate Room Database: a) Define Task Entity:
    File: Task.java or Task.kt
    Fields: name, description, dueDate, category.
    Annotate with @Entity and define primary key.

b) Update RoomDatabase:

    Add Task class to the entities array in the @Database annotation of your AppDatabase class.

EXTRA:

Extended the Application Class
    Created a custom Application class:
        Holds singleton of Database

Fixed various bugs

--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".gui.AddTask" >
+    tools:context=".gui.AddTaskFragment" >
 
     <EditText
         android:id="@+id/taskNameEt"
@@ -19,6 +19,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/pickDateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="137dp"
+        android:layout_marginTop="36dp"
+        android:text="Pick a Date"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pickDateLabel" />
+
     <EditText
         android:id="@+id/pickDateEt"
         android:layout_width="wrap_content"
@@ -28,7 +38,7 @@
         android:ems="10"
         android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pickDateLabel" />
+        app:layout_constraintTop_toBottomOf="@+id/pickDateButton" />
 
     <TextView
         android:id="@+id/pickDateLabel"
