--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -119,4 +119,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskTypeRG" />
 
+    <Button
+        android:id="@+id/closeTaskTab"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="X"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
