Design Reminder Functionality
a) UI Update for Reminder Setting:

    Add a date and time picker in task creation/editing form. Use DatePickerDialog and TimePickerDialog for this purpose.
    Add a toggle button or switch to enable/disable the reminder.

Include Date and Time Picker:

a) Store Reminder Time in Task Entity:

    Update your Task entity to include field for storing reminder time

--- a/app/src/main/res/layout/activity_main_frame.xml
+++ b/app/src/main/res/layout/activity_main_frame.xml
@@ -7,15 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivityFrame">
 
-    <!-- Your existing UI components go here -->
-
     <Button
         android:id="@+id/addTaskButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
         android:layout_marginTop="30dp"
-        android:text="Add Task"
+        android:text="@string/add_task"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,11 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="142dp"
         android:layout_marginTop="30dp"
-        android:text="View Tasks"
+        android:text="@string/view_tasks"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addTaskButton" />
 
-    <!-- Wrap the bottom ConstraintLayout with a ScrollView -->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -42,8 +39,6 @@
             android:id="@+id/fragmentFrame"
             android:layout_width="409dp"
             android:layout_height="wrap_content">
-
-            <!-- Content inside the scrollable area goes here -->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
