--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -5,7 +5,8 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".gui.AddTaskFragment" >
+    android:textAlignment="center"
+    tools:context=".gui.AddTaskFragment">
 
     <EditText
         android:id="@+id/taskNameEt"
@@ -15,7 +16,8 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="text"
-        android:text="@string/task_name"
+        android:hint="@string/task_name"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,9 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="137dp"
         android:layout_marginTop="36dp"
-        android:text="Pick a Date"
+        android:text="@string/pick_a_date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pickDateLabel" />
+        app:layout_constraintTop_toBottomOf="@+id/taskNameEt" />
 
     <EditText
         android:id="@+id/pickDateEt"
@@ -37,19 +39,9 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="date"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickDateButton" />
-
-    <TextView
-        android:id="@+id/pickDateLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="131dp"
-        android:layout_marginTop="36dp"
-        android:text="@string/select_date"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskNameEt" />
 
     <EditText
         android:id="@+id/taskDescriptionEt"
@@ -59,7 +51,8 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="text"
-        android:text="@string/task_description"
+        android:hint="@string/task_description"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickDateEt" />
 
@@ -67,10 +60,10 @@
         android:id="@+id/taskTypeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="134dp"
+        android:layout_marginStart="140dp"
         android:layout_marginTop="36dp"
         android:text="@string/task_type"
-        android:textSize="25sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskDescriptionEt" />
 
@@ -79,7 +72,7 @@
         android:layout_width="343dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="22dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskTypeLabel">
@@ -125,8 +118,18 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="X"
+        android:text="@string/x"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBoxAlarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="154.47dp"
+        android:layout_marginTop="36dp"
+        android:text="@string/alarm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saveButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
